--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,5 +1,5 @@
 <h1>Inicio de sesión</h1>
-<form id="login-form" action="/session/login" method="post" enctype="multipart/form-data">
+<form class="forms" id="login-form" action="/session/login" method="post" enctype="multipart/form-data">
     <label for="email">Correo</label>
     <input type="email" name="email" id="email" placeholder="Ingrese su correo" required>
 
