--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,5 +1,5 @@
 <h1>Registro</h1>
-<form id="register-form" action="/session/register" method="post" enctype="multipart/form-data">
+<form class="forms" id="register-form" action="/session/register" method="post" enctype="multipart/form-data">
     <label for="first_name">Nombre</label>
     <input type="text" name="first_name" id="first_name" placeholder="Ingrese su nombre" required>
 
