--- a/src/views/cookies.handlebars
+++ b/src/views/cookies.handlebars
@@ -1,4 +1,4 @@
-<form id="form-cookie" action="/cookies/submit" method="post">
+<form class="forms" id="form-cookie" action="/cookies/submit" method="post">
     <label for="name">Name</label>
     <input id="name" type="text" name="name">
     <label for="text">Text</label>
