--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -5,14 +5,16 @@
         <h2>{{this.title}}</h2>
         <p>{{this.description}}</p>
         <p>Precio: ${{this.price}}</p>
+        <a class="button" href="/products/{{this.id}}">Ver más</a>
     </div>
     {{/each}}
 </div>
 <div class="pagination_section">
     {{#if products.hasPrevPage}}
         <a href="?page={{products.prevPage}}">&lt;&lt; Previous</a>
-    {{/if}}
-    {{!-- {{#each products.pages}}
+    {{/if}} | 
+    page {{products.page}} | 
+    {{!-- {{#each products.page}}
         {{#if this.isCurrent}}
             <a href="#" title="{{this}}">{{this}}</a>
         {{else}}
@@ -23,3 +25,5 @@
         <a href="?page={{products.nextPage}}">Next &gt;&gt;</a>
     {{/if}}
 </div>
+
+<script src="/js/products.js"></script>
