--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -15,7 +15,7 @@
     <label for="password">Contraseña</label>
     <input type="password" name="password" id="password" placeholder="Ingrese su contraseña" required>
     
-    <button type="submit">Ingresar</button>
+    <button type="submit">Registrarme</button>
 </form>
 
 <script src="/js/register.js"></script>
