agrego passport con login github

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -9,4 +9,6 @@
     <button type="submit">Ingresar</button>
 </form>
 
+<a class="btn" href="/session/github">Ingresar con Github</a>
+
 <script src="/js/login.js"></script>
