--- a/src/views/productDetail.handlebars
+++ b/src/views/productDetail.handlebars
@@ -19,7 +19,7 @@
             {{/if}}
             {{#if this.category }}
                 <p>Categoría: {{this.category}}</p>
-                <button class="btn-add-to-cart" id="add-to-cart" data-id="{{this._id}}">Agregar al carrito</button>
+                <button class="add-to-cart" data-id="{{this._id}}">Agregar al carrito</button>
             {{/if}}
         </div>
     </div>
