--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,30 +1,37 @@
-<h1>Productos</h1>
-<div id="product-list">
-    {{#each products.docs}}
-    <div class="product">
-        <h2>{{this.title}}</h2>
-        <p>{{this.description}}</p>
-        <p>Precio: ${{this.price}}</p>
-        <a class="button" href="/products/{{this.id}}">Ver más</a>
-        <button class="add-to-cart" data-id="{{this._id}}">Agregar al carrito</button>
+<main class="main-products">
+    <div class="div-order-products">
+        <h1>Productos</h1>
+        Ordenar por
+        <button class="button" id="order-by-price-asc" data-sort="asc" data-order="price">Menor precio</button>
+        <button class="button" id="order-by-price-desc" data-sort="desc" data-order="price">Mayor precio</button>
     </div>
-    {{/each}}
-</div>
-<div class="pagination_section">
-    {{#if products.hasPrevPage}}
-        <a href="?page={{products.prevPage}}">&lt;&lt; Previous</a>
-    {{/if}} | 
-    page {{products.page}} | 
-    {{!-- {{#each products.page}}
-        {{#if this.isCurrent}}
-            <a href="#" title="{{this}}">{{this}}</a>
-        {{else}}
-            <a href="?page={{this}}" title="{{this}}">{{this}}</a>
+    <div id="product-list">
+        {{#each products.docs}}
+        <div class="product">
+            <h2>{{this.title}}</h2>
+            <p>{{this.description}}</p>
+            <p>Precio: ${{this.price}}</p>
+            <a class="button" href="/products/{{this.id}}">Ver más</a>
+            <button class="add-to-cart" data-id="{{this._id}}">Agregar al carrito</button>
+        </div>
+        {{/each}}
+    </div>
+    <div class="pagination_section">
+        {{#if products.hasPrevPage}}
+            <a href="?page={{products.prevPage}}{{#if sort}}&sort={{sort}}{{/if}}">&lt;&lt; Previous</a>
+        {{/if}} | 
+        page {{products.page}} | 
+        {{!-- {{#each products.page}}
+            {{#if this.isCurrent}}
+                <a href="#" title="{{this}}">{{this}}</a>
+            {{else}}
+                <a href="?page={{this}}" title="{{this}}">{{this}}</a>
+            {{/if}}
+        {{/each}} --}}
+        {{#if products.hasNextPage}}
+            <a href="?page={{products.nextPage}}{{#if sort}}&sort={{sort}}{{/if}}">Next &gt;&gt;</a>
         {{/if}}
-    {{/each}} --}}
-    {{#if products.hasNextPage}}
-        <a href="?page={{products.nextPage}}">Next &gt;&gt;</a>
-    {{/if}}
-</div>
+    </div>
+</main>
 
 <script src="/js/products.js"></script>
