--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -54,7 +54,7 @@
                 <ul>
                     <li><a href="/session/register">Creá tu cuenta</a></li>
                     <li><a href="/session/login">Ingresá</a></li>
-                    <li>Mis compras</li>
+                    <li><a href="/carts">Mis compras</a></li>
                     <li>
                         <a href="/carts">
                             <img src="/img/carrito.png">
