--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -65,5 +65,13 @@
         </nav>
     </header>
     {{{ body }}}
+    <footer>
+        <div>
+            <p>Cómo cuidamos tu privacidad - Copyright © 1999-2023 MercadoLibre S.R.L.</p>
+        </div>
+        <div>
+            <p>Protegido por reCAPTCHA - Privacidad - Condiciones</p>
+        </div>
+    </footer>
 </body>
 </html>
