--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -317,3 +317,19 @@ hr {
     align-items: center;
     gap: 25px;
 }
+
+/* FOOTER  */
+footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 80px;
+    font-size: 12px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0 20px 0 20px;
+    justify-content: space-between;
+    background-color: white;
+}
